<resources>
    <string name="app_name">VEX Scouter</string>
    <string name="action_filter">Filter</string>
    <string name="season_prompt">Season</string>
    <string-array name="vrc_seasons">
        <item>Any</item>
        <item>Toss Up</item>
        <item>Sack Attack</item>
        <item>Gateway</item>
        <item>Round Up</item>
        <item>Clean Sweep</item>
        <item>Elevation></item>
        <item>Bridge Battle</item>
        <item>Skyrise</item>
        <item>Nothing But Net</item>
        <item>Starstruck</item>
        <item>In The Zone</item>
    </string-array>
    <string name="program_prompt">Program</string>
    <string-array name="programs">
        <item>Any</item>
        <item>VRC</item>
        <item>VEXU</item>
    </string-array>
    <string name="current_season">In The Zone</string>
    <string name="country_prompt">Country</string>
    <string-array name="countries">
        <item>Any</item>
        <item>United States</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Hong Kong</item>
        <item>Mexico</item>
        <item>New Zealand</item>
        <item>Singapore</item>
        <item>United Kingdom</item>
        <item>Afghanistan</item>
        <item>Aland Islands</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Antarctic Territory</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canton and Enderbury Islands</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>Christmas Island</item>
        <item>Cocos Islands</item>
        <item>Comoros</item>
        <item>Congo - Brazzaville</item>
        <item>Congo - Kinshasa</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Dronning Maud Land</item>
        <item>East Germany</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern and Antarctic Territories</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Johnston Island</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Metropolitan France</item>
        <item>Micronesia</item>
        <item>Midway Islands</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>Neutral Zone</item>
        <item>New Caledonia</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>North Vietnam</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pacific Islands Trust Territory</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestinian Territory</item>
        <item>Panama</item>
        <item>Panama Canal Zone</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>People\'s Democratic Republic of Yemen</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Barthélemy</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Serbia and Montenegro</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>U.S. Miscellaneous Pacific Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Union of Soviet Socialist Republics</item>
        <item>United Arab Emirates</item>
        <item>United States Minor Outlying Islands</item>
        <item>Unknown or Invalid Region</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wake Island</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="region_prompt">State / Region</string>
    <string name="vrating_label">vRating:</string>
    <string name="notes_label">Notes:</string>
    <string name="save_button">Save</string>
    <string name="refresh_button">Refresh</string>
    <string name="action_favorite">Favorite</string>
    <string name="event_info">Ranked #%1$d at %2$s</string>
    <string name="share_event">Share all teams</string>
</resources>