<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/action_favorite"
        android:icon="@android:drawable/btn_star_big_off"
        app:showAsAction="ifRoom"
        android:id="@+id/action_favorite" />
    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="ifRoom"
        android:title="@string/share_event"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider"
        android:icon="@android:drawable/ic_menu_share" />
    <item android:title="@string/refresh_button"
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="ifRoom" />
</menu>