<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_team"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mkalash.vexscouter.TeamActivity"
    android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_progress"
                android:max="100"
                android:progress="0" />

            <TextView
                android:text="@string/vrating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vrating_label" />

            <RatingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vrating"
                android:isIndicator="true"
                android:stepSize="0.25"
                android:numStars="10"
                android:rating="0"
                style="@style/Widget.AppCompat.RatingBar.Indicator" />

            <TextView
                android:text="@string/notes_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notes_label" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notes_edit_text" />

            <Button
                android:text="@string/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_notes" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_information"
            android:visibility="gone"
            android:layout_marginTop="2dp">

            <TextView
                android:text="@string/event_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_info_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/event_schedule"
                android:background="@color/colorAccent" />

        </LinearLayout>
</LinearLayout>
